tdf#107920: Crash when using ScCompiler in condformat

Just call SetGrammar from ScCompiler object with grammar of document
See bt in https://bugs.documentfoundation.org/attachment.cgi?id=133382

Change-Id: Iedf4b88f2821bbcf728e4b1c023041fd6f10e5f3
Reviewed-on: https://gerrit.libreoffice.org/37739
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>