sc/source/ui/unoobj/condformatuno.cxx
@@ -717,6 +717,7 @@ void SAL_CALL ScConditionEntryObj::setPropertyValue(
             if ((aValue >>= aFormula) && !aFormula.isEmpty())
             {
                 ScCompiler aComp(&mpDocShell->GetDocument(), getCoreObject()->GetSrcPos());
+                aComp.SetGrammar(mpDocShell->GetDocument().GetGrammar());
                 std::unique_ptr<ScTokenArray> pArr(aComp.CompileString(aFormula));
                 getCoreObject()->SetFormula1(*pArr);
             }
@@ -728,6 +729,7 @@ void SAL_CALL ScConditionEntryObj::setPropertyValue(
             if ((aValue >>= aFormula) && !aFormula.isEmpty())
             {
                 ScCompiler aComp(&mpDocShell->GetDocument(), getCoreObject()->GetSrcPos());
+                aComp.SetGrammar(mpDocShell->GetDocument().GetGrammar());
                 std::unique_ptr<ScTokenArray> pArr(aComp.CompileString(aFormula));
                 getCoreObject()->SetFormula2(*pArr);
             }
